fix: 인증 경로 허